force-app/main/default/objects/Facial__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Facial</relationshipLabel>
    <relationshipName>Facial</relationshipName>
    <type>Lookup</type>
</CustomField>