force-app/main/default/objects/Facial__c/fields/Facial_Location__c.field-meta.xml
<CustomField>
    <fullName>Facial_Location__c</fullName>
    <label>Facial Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Face</fullName>
            </value>
            <value>
                <fullName>Forehead</fullName>
            </value>
            <value>
                <fullName>Eyes</fullName>
            </value>
            <value>
                <fullName>Cheeks</fullName>
            </value>
            <value>
                <fullName>Left Cheek</fullName>
            </value>
            <value>
                <fullName>Right Cheek</fullName>
            </value>
            <value>
                <fullName>Lips</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Décolleté</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>